--- a/views/partials/footer.pug
+++ b/views/partials/footer.pug
@@ -1,3 +1,8 @@
+-let year = (new Date()).getFullYear()
 footer
   .text-center
-    p © 2018 Carl Wallis. All Rights Reserved
+    p 
+      | © 
+      !=year
+      |
+      | Carl Wallis. All Rights Reserved
