--- a/views/contact.pug
+++ b/views/contact.pug
@@ -3,23 +3,24 @@ extends layout
 block content
   - var aosdelay = "0.5"
   - var aosanimation = "slide-up"
-    .blog-slider(style="height:auto;")
+    .blog-slider(style="height:auto;").contact-margin
         .blog-slider__wrp.swiper-wrapper
             .blog-slider__item.swiper-slide
                 .blog-slider__img   
                     img.grayscale-img(src="/images/guitar.jpg" alt="")
-                .blog-slider__content
+                .blog-slider__content.contact-width
                     .blog-slider__title Carl Wallis Music
+                    hr
                     .blog-slider__text(style="font-size: 1.8em") Get in touch
                     .contact-icons-page                    
-                        a(href="https://www.facebook.com/carlwallismusic/")
+                        a(href="https://www.facebook.com/carlwallismusic/").flex-contact
                             .facebook
                                 i.fab.fa-facebook-f
                                 .blog-slider__text Facebook  
                         a(href="http://m.me/carlwallismusic/")
                             .facebook-message
                                 i.fas.fa-comments
-                                .blog-slider__text Facebook Messenger 
+                                .blog-slider__text Messenger 
                         a(href="mailto:c.wallis11@outlook.com?subject=Music Tuition")
                             .email
                                 i.fas.fa-envelope
