updated animation and lazyload

--- a/views/contact.pug
+++ b/views/contact.pug
@@ -7,7 +7,7 @@ block content
         .blog-slider__wrp.swiper-wrapper
             .blog-slider__item.swiper-slide
                 .blog-slider__img   
-                    img.grayscale-img(src="/images/guitar.jpg" alt="")
+                    img.lazyload.grayscale-img(data-src="/images/guitar.jpg" alt="")
                 .blog-slider__content.contact-width
                     .blog-slider__title Carl Wallis Music
                     hr
